--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,3 +2,12 @@
   margin: 0;
   scroll-behavior: smooth;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type='number'] {
+  -moz-appearance: textfield;
+}
