--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -11,3 +11,9 @@ input::-webkit-inner-spin-button {
 input[type='number'] {
   -moz-appearance: textfield;
 }
+.greenColor {
+  color: green !important;
+}
+.redColor {
+  color: red !important;
+}
