--- a/frontend/src/components/Product/productDetials.css
+++ b/frontend/src/components/Product/productDetials.css
@@ -27,7 +27,7 @@
 }
 .detailsBlock-1 > p {
   color: rgb(54, 54, 54, 0.6);
-  font: 600 1.6vmax cursive;
+  font: 600 1vmax cursive;
 }
 .detailsBlock-2 {
   display: flex;
@@ -38,11 +38,12 @@
   width: 70%;
   padding: 1vmax 0;
   margin: 1vmax 0;
+  font: 600 1vmax;
 }
-.detailsBlock-2 > span {
-  color: rgba(54, 54, 54, 0.5);
-  font: 200 0.6vmax cursive;
+.detailsBlock-2-span {
+  font: 600 1.5vmax 'Roboto';
 }
+
 .detailsBlock-3 {
   width: 70%;
 }
@@ -145,7 +146,7 @@
   flex: none;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.266);
   border: 1px solid rgba(0, 0, 0, 0.166);
-  width: 50vmax;
+  width: 20vmax;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -159,7 +160,7 @@
   color: rgba(0, 0, 0, 0.834);
   font: 600 0.9vmax 'Roboto';
 }
-.reviewCard > span {
+.reviewCardComment {
   color: rgba(0, 0, 0, 0.534);
   font: 300 0.8vmax cursive;
 }
@@ -167,6 +168,17 @@
   font: 400 1.3vmax 'Gill sans';
   text-align: center;
   color: rgba(0, 0, 0, 0.534);
+}
+.SubmitDialog {
+  display: flex;
+  flex-direction: column;
+}
+.submitDialogTextArea {
+  border: 1px solid rgba(0, 0, 0, 0.166);
+  margin: 1vmax 0;
+  outline: none;
+  padding: 1rem;
+  font: 300 1rem 'Roboto';
 }
 
 @media screen and (max-width: 600px) {
